--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'fabric-loom' version '0.2.5-SNAPSHOT'
+    id 'fabric-loom' version '0.2.6-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -22,7 +22,7 @@ configFile.withReader {
 
 dependencies {
     minecraft "com.mojang:minecraft:" + config.minecraft_version
-    mappings "net.fabricmc:yarn:" + config.mappings_version
+    mappings "net.fabricmc:yarn:" + config.mappings_version + ":v2"
     modCompile "net.fabricmc:fabric-loader:" + config.fabric_loader_version
     compile "com.google.code.findbugs:jsr305:3.0.2"
 
